[package]
name = "iocqhttp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
reqwest = "0.11.6"
log = "0.4.17"
rocket = { version = "0.5.0-rc.2", features = ["json","secrets"] }
thiserror = "1.0.38"
tokio = { version = "1.24.1", features = ["fs"] }
